apps/k8s/base/network-policy.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: global
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 10.244.0.0/16 # k8s cluster (probes)
    - to:
        - ipBlock:
            cidr: 34.120.195.249/32 # sentry.io
    - to:
      ports:
        - port: 80
